# ackermann_pipe

./: README.md  package.xml  setup.cfg  setup.py
capturas/: DatosSensorLidar.webm
install/: local_setup.sh  setup.sh
install/ackermann_pipe/share/ackermann_pipe/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ackermann_pipe/share/ackermann_pipe/launch/: gazebo.launch.py  visualization.launch.py
install/ackermann_pipe/share/ackermann_pipe/urdf/: lidar.xacro
launch/: gazebo.launch.py  visualization.launch.py
log/: latest_build
urdf/: ackermann.xacro  ackermann_sensor_xacro.urdf
