<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_pipe</name>
  <version>0.1.0</version>
  <description>Simulación y visualización de robot Ackermann con sensor LIDAR en ROS2</description>
  <maintainer email="gabriel.escobar1901@alumnos.ubiobio.cl">Gabriel Escobar</maintainer>
  <license>MIT</license>

  <!-- Dependencias principales -->
  <depend>rclpy</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Dependencias de prueba -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
